[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Enemies/BawsWalk.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Life.gd" type="Script" id=2]
[ext_resource path="res://Boss.gd" type="Script" id=3]
[ext_resource path="res://Assets/LifeBarProgress.png" type="Texture" id=4]
[ext_resource path="res://Assets/LifeBarUnder.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/BawsAttack.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=48]
radius = 35.7958
height = 14.0864

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=50]
radius = 35.0305
height = 16.2842

[node name="Boss" type="KinematicBody2D"]
input_pickable = true
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 49 )
animation = "walk"
frame = 2
playing = true

[node name="Life" type="PanelContainer" parent="."]
margin_left = -119.629
margin_top = 42.1122
margin_right = 120.371
margin_bottom = 86.1122
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Life"]
margin_left = 7.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="Life/VBoxContainer"]
margin_right = 226.0
margin_bottom = 30.0

[node name="hp_label" type="Label" parent="Life/VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 22.0
margin_bottom = 22.0
text = "HP:"

[node name="bar" type="TextureProgress" parent="Life/VBoxContainer/HBoxContainer"]
margin_left = 26.0
margin_right = 226.0
margin_bottom = 30.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 50 )
[connection signal="input_event" from="." to="." method="_on_NormalEnemy_input_event"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
